--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 #2
 env:
   REGISTRY: "registry.digitalocean.com/cybercityregistry"
-  IMAGE_NAME: "authentifizierung"
+  IMAGE_NAME: "umwelt"
 
 #3
 jobs:
