--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
           envs: IMAGE_NAME,REGISTRY,{{ secrets.DO_ACCESS }},GITHUB_SHA
           script: |
             # Stop docker
+            docker-compose stop
             
       - name: Start docker (deploy this)
         uses: appleboy/ssh-action@v0.1.3
@@ -65,6 +66,7 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           envs: IMAGE_NAME,REGISTRY,{{ secrets.DO_ACCESS }},GITHUB_SHA
           script: |
-            # Stop docker
+            # Start docker
             cd ~/docker
+            docker pull
             docker-compose up -d --force-recreate
