--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "amqplib": "^0.9.0",
     "express": "^4.18.0",
-    "express.js": "^1.0.0"
+    "express.js": "^1.0.0",
+    "jquery": "^3.6.0"
   }
 }
