--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "umwelt",
+  "name": "softwareprojektmanagement",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Software-Projekt-2022/Umwelt.git"
+    "start": "node -r dotenv/config index.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Software-Projekt-2022/Umwelt/issues"
-  },
-  "homepage": "https://github.com/Software-Projekt-2022/Umwelt#readme",
   "dependencies": {
-    "amqplib": "^0.9.0",
-    "express": "^4.18.0",
-    "express.js": "^1.0.0",
-    "jquery": "^3.6.0"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.0"
   }
 }
