--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "node-fetch": "^2.6.7"
   }
 }
