--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,5 +68,5 @@ jobs:
           script: |
             # Start docker
             cd ~/docker
-            docker pull
+            docker-compose pull
             docker-compose up -d --force-recreate
