--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,9 @@ jobs:
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME_BA)
   deploy:
     runs-on: ubuntu-20.04
-    needs: build_and_push
+    needs: 
+      - build_and_push_frontend
+      - build_and_push_backend
 
     steps:
       - name: Stop running docker
