--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:latest
 
-ENV adress="localhost"
+ENV adress="https://umwelt.cyber-city.systems/api"
 ENV port="8080"
 ENV RABBITMQ_HOST="rabbitmq"
 ENV RABBITMQ_PORT="5672"
